/**
 * Created with IntelliJ IDEA.
 * User: glukki
 * Date: 09.05.12
 * Time: 16:31
 * To change this template use File | Settings | File Templates.
 */

import "Flowerbed.proto";
option java_package = "com.kloomba.app.protobuf";
option java_outer_classname = "BookmarkRemoveProto";

//request: /bookmark/remove?id=1
message BookmarkRemove {
    optional int32 timestamp = 1;
    repeated Flowerbed flowerbed = 2; //updated bookmark list
}